Upgrade java to 17